--- a/000_syllabus_conflict_neg_2022_1.html
+++ b/000_syllabus_conflict_neg_2022_1.html
@@ -47,6 +47,7 @@
 
 
 
+
 <style type="text/css">
 /* for pandoc --citeproc since 2.11 */
 div.csl-bib-body { }
@@ -93,6 +94,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -222,7 +226,7 @@ pre code {
 </ul></li>
 <li><p><strong>Communication through the virtual classroom</strong></p>
 <ul>
-<li><p>Every Sunday between 07:00 hours and 08:00 hours:</p>
+<li><p>Every Sunday between 06:00 hours and 06:45 hours:</p>
 <ul>
 <li><em>Primer Corte 30% &gt; Virtual Meetings &gt; Meeting hours with students</em></li>
 </ul></li>
