Adding coase workshops

--- a/000_syllabus_conflict_neg_2025_1.html
+++ b/000_syllabus_conflict_neg_2025_1.html
@@ -2229,7 +2229,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Modified</div>
     <div class="quarto-title-meta-contents">
-      <p class="date-modified">February 19, 2025</p>
+      <p class="date-modified">March 19, 2025</p>
     </div>
   </div>
     
@@ -2466,7 +2466,7 @@ Table 1: Reading schedule
 <ul>
 <li><strong>Virtual meeting Presentation Syllabus</strong>
 <ul>
-<li><strong>Meeting time</strong>: 19:00 - 19:45 hours</li>
+<li><strong>Meeting time</strong>: 19:00 - hours</li>
 <li><strong>Prerequisites</strong>:
 <ul>
 <li>Review the course program in advance, which can be downloaded by following the route <em>Primer corte 30% &gt; Learning Resources &gt; Support material &gt; Presentations &gt; 000_syllabus_conflict_neg_…</em></li>
@@ -2512,7 +2512,7 @@ Table 1: Reading schedule
 </ul></li>
 <li><p>April 3</p>
 <ul>
-<li><strong>Virtual meeting Questions: Strategy and Tactics of Distributive Bargaining</strong>
+<li><strong>Virtual meeting Workshop: Líderes para el Trabajo en Equipo</strong>
 <ul>
 <li><strong>Meeting time</strong>: 19:00 - 19:45 hours</li>
 <li><strong>Prerequisites</strong>:
@@ -2646,7 +2646,7 @@ Table 1: Reading schedule
 </ul></li>
 <li><p>May 1</p>
 <ul>
-<li><strong>Virtual meeting Questions: Perception, Cognition, and Emotion</strong>
+<li><strong>Virtual meeting Workshop: Pienso, hablo y actuó - Pilares de la comunicación</strong>
 <ul>
 <li><strong>Meeting time</strong>: 19:00 - 19:45 hours</li>
 <li><strong>Prerequisites</strong>:
@@ -2772,7 +2772,7 @@ Table 1: Reading schedule
 </ul></li>
 <li><p>May 22</p>
 <ul>
-<li><strong>Virtual meeting Questions: Ethics in Negotiation</strong>
+<li><strong>Virtual meeting Workshop: ¿Cómo ser un orador efectivo?</strong>
 <ul>
 <li><strong>Meeting time</strong>: 19:00 - 19:45 hours</li>
 <li><strong>Prerequisites</strong>:
