--- a/000_syllabus_conflict_neg_2025_2.html
+++ b/000_syllabus_conflict_neg_2025_2.html
@@ -2231,7 +2231,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Modified</div>
     <div class="quarto-title-meta-contents">
-      <p class="date-modified">July 2, 2025</p>
+      <p class="date-modified">July 21, 2025</p>
     </div>
   </div>
     
@@ -2261,7 +2261,7 @@ p { text-align: justify;
 </ul></li>
 <li><p>Complaints regarding grades, please send an email to <a href="mailto:%60r%20rmarkdown::metadata$author%5B%5B1%5D%5D$email%60"><strong>luis.gomezl@unimilitar.edu.co</strong></a></p>
 <ul>
-<li>Please wait for grades to be published on the News Bulletin Board before submitting any complaints. Complaints should be based on the feedback provided and must take into account the evaluation parameters.</li>
+<li>Please wait for grades to be published on the Announcements forum before submitting any complaints. Complaints should be based on the feedback provided and must take into account the evaluation parameters.</li>
 </ul></li>
 <li><p>For urgent issues, you can call me to +57 3124541536 between 14:00 hours and 15:00 hours on Monday, Wednesday or Friday. But, please do not send me whatsapp messages or call me on weekends.</p></li>
 </ul></li>
@@ -2324,20 +2324,20 @@ Table 1: Reading schedule
 </figcaption>
 <div aria-describedby="tbl-reading-schedule-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output-display">
-<div id="dqxbgjpksh" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#dqxbgjpksh table {
+<div id="crouphifug" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#crouphifug table {
 font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
 }
-#dqxbgjpksh thead, #dqxbgjpksh tbody, #dqxbgjpksh tfoot, #dqxbgjpksh tr, #dqxbgjpksh td, #dqxbgjpksh th {
+#crouphifug thead, #crouphifug tbody, #crouphifug tfoot, #crouphifug tr, #crouphifug td, #crouphifug th {
 border-style: none;
 }
-#dqxbgjpksh p {
+#crouphifug p {
 margin: 0;
 padding: 0;
 }
-#dqxbgjpksh .gt_table {
+#crouphifug .gt_table {
 display: table;
 border-collapse: collapse;
 line-height: normal;
@@ -2362,11 +2362,11 @@ border-left-style: none;
 border-left-width: 2px;
 border-left-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_caption {
+#crouphifug .gt_caption {
 padding-top: 4px;
 padding-bottom: 4px;
 }
-#dqxbgjpksh .gt_title {
+#crouphifug .gt_title {
 color: #333333;
 font-size: 125%;
 font-weight: initial;
@@ -2377,7 +2377,7 @@ padding-right: 5px;
 border-bottom-color: #FFFFFF;
 border-bottom-width: 0;
 }
-#dqxbgjpksh .gt_subtitle {
+#crouphifug .gt_subtitle {
 color: #333333;
 font-size: 85%;
 font-weight: initial;
@@ -2388,7 +2388,7 @@ padding-right: 5px;
 border-top-color: #FFFFFF;
 border-top-width: 0;
 }
-#dqxbgjpksh .gt_heading {
+#crouphifug .gt_heading {
 background-color: #FFFFFF;
 text-align: center;
 border-bottom-color: #FFFFFF;
@@ -2399,12 +2399,12 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_bottom_border {
+#crouphifug .gt_bottom_border {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_col_headings {
+#crouphifug .gt_col_headings {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -2418,7 +2418,7 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_col_heading {
+#crouphifug .gt_col_heading {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -2437,7 +2437,7 @@ padding-left: 5px;
 padding-right: 5px;
 overflow-x: hidden;
 }
-#dqxbgjpksh .gt_column_spanner_outer {
+#crouphifug .gt_column_spanner_outer {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -2448,13 +2448,13 @@ padding-bottom: 0;
 padding-left: 4px;
 padding-right: 4px;
 }
-#dqxbgjpksh .gt_column_spanner_outer:first-child {
+#crouphifug .gt_column_spanner_outer:first-child {
 padding-left: 0;
 }
-#dqxbgjpksh .gt_column_spanner_outer:last-child {
+#crouphifug .gt_column_spanner_outer:last-child {
 padding-right: 0;
 }
-#dqxbgjpksh .gt_column_spanner {
+#crouphifug .gt_column_spanner {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #000000;
@@ -2465,10 +2465,10 @@ overflow-x: hidden;
 display: inline-block;
 width: 100%;
 }
-#dqxbgjpksh .gt_spanner_row {
+#crouphifug .gt_spanner_row {
 border-bottom-style: hidden;
 }
-#dqxbgjpksh .gt_group_heading {
+#crouphifug .gt_group_heading {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -2493,7 +2493,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 text-align: left;
 }
-#dqxbgjpksh .gt_empty_group_heading {
+#crouphifug .gt_empty_group_heading {
 padding: 0.5px;
 color: #333333;
 background-color: #FFFFFF;
@@ -2507,13 +2507,13 @@ border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 vertical-align: middle;
 }
-#dqxbgjpksh .gt_from_md > :first-child {
+#crouphifug .gt_from_md > :first-child {
 margin-top: 0;
 }
-#dqxbgjpksh .gt_from_md > :last-child {
+#crouphifug .gt_from_md > :last-child {
 margin-bottom: 0;
 }
-#dqxbgjpksh .gt_row {
+#crouphifug .gt_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -2531,7 +2531,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 overflow-x: hidden;
 }
-#dqxbgjpksh .gt_stub {
+#crouphifug .gt_stub {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -2543,7 +2543,7 @@ border-right-color: #D3D3D3;
 padding-left: 5px;
 padding-right: 5px;
 }
-#dqxbgjpksh .gt_stub_row_group {
+#crouphifug .gt_stub_row_group {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -2556,13 +2556,13 @@ padding-left: 5px;
 padding-right: 5px;
 vertical-align: top;
 }
-#dqxbgjpksh .gt_row_group_first td {
+#crouphifug .gt_row_group_first td {
 border-top-width: 2px;
 }
-#dqxbgjpksh .gt_row_group_first th {
+#crouphifug .gt_row_group_first th {
 border-top-width: 2px;
 }
-#dqxbgjpksh .gt_summary_row {
+#crouphifug .gt_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -2571,14 +2571,14 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#dqxbgjpksh .gt_first_summary_row {
+#crouphifug .gt_first_summary_row {
 border-top-style: solid;
 border-top-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_first_summary_row.thick {
+#crouphifug .gt_first_summary_row.thick {
 border-top-width: 2px;
 }
-#dqxbgjpksh .gt_last_summary_row {
+#crouphifug .gt_last_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -2587,7 +2587,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_grand_summary_row {
+#crouphifug .gt_grand_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -2596,7 +2596,7 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#dqxbgjpksh .gt_first_grand_summary_row {
+#crouphifug .gt_first_grand_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -2605,7 +2605,7 @@ border-top-style: double;
 border-top-width: 6px;
 border-top-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_last_grand_summary_row_top {
+#crouphifug .gt_last_grand_summary_row_top {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -2614,10 +2614,10 @@ border-bottom-style: double;
 border-bottom-width: 6px;
 border-bottom-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_striped {
+#crouphifug .gt_striped {
 background-color: rgba(128, 128, 128, 0.05);
 }
-#dqxbgjpksh .gt_table_body {
+#crouphifug .gt_table_body {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -2625,7 +2625,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_footnotes {
+#crouphifug .gt_footnotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -2638,7 +2638,7 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_footnote {
+#crouphifug .gt_footnote {
 margin: 0px;
 font-size: 90%;
 padding-top: 4px;
@@ -2646,7 +2646,7 @@ padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#dqxbgjpksh .gt_sourcenotes {
+#crouphifug .gt_sourcenotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -2659,64 +2659,64 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#dqxbgjpksh .gt_sourcenote {
+#crouphifug .gt_sourcenote {
 font-size: 90%;
 padding-top: 4px;
 padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#dqxbgjpksh .gt_left {
+#crouphifug .gt_left {
 text-align: left;
 }
-#dqxbgjpksh .gt_center {
+#crouphifug .gt_center {
 text-align: center;
 }
-#dqxbgjpksh .gt_right {
+#crouphifug .gt_right {
 text-align: right;
 font-variant-numeric: tabular-nums;
 }
-#dqxbgjpksh .gt_font_normal {
+#crouphifug .gt_font_normal {
 font-weight: normal;
 }
-#dqxbgjpksh .gt_font_bold {
+#crouphifug .gt_font_bold {
 font-weight: bold;
 }
-#dqxbgjpksh .gt_font_italic {
+#crouphifug .gt_font_italic {
 font-style: italic;
 }
-#dqxbgjpksh .gt_super {
+#crouphifug .gt_super {
 font-size: 65%;
 }
-#dqxbgjpksh .gt_footnote_marks {
+#crouphifug .gt_footnote_marks {
 font-size: 75%;
 vertical-align: 0.4em;
 position: initial;
 }
-#dqxbgjpksh .gt_asterisk {
+#crouphifug .gt_asterisk {
 font-size: 100%;
 vertical-align: 0;
 }
-#dqxbgjpksh .gt_indent_1 {
+#crouphifug .gt_indent_1 {
 text-indent: 5px;
 }
-#dqxbgjpksh .gt_indent_2 {
+#crouphifug .gt_indent_2 {
 text-indent: 10px;
 }
-#dqxbgjpksh .gt_indent_3 {
+#crouphifug .gt_indent_3 {
 text-indent: 15px;
 }
-#dqxbgjpksh .gt_indent_4 {
+#crouphifug .gt_indent_4 {
 text-indent: 20px;
 }
-#dqxbgjpksh .gt_indent_5 {
+#crouphifug .gt_indent_5 {
 text-indent: 25px;
 }
-#dqxbgjpksh .katex-display {
+#crouphifug .katex-display {
 display: inline-flex !important;
 margin-bottom: 0.75em !important;
 }
-#dqxbgjpksh div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#crouphifug div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
 height: 0px !important;
 }
 </style>
@@ -2881,7 +2881,7 @@ height: 0px !important;
 </ul></li>
 <li><p>September 25</p>
 <ul>
-<li><strong>Virtual meeting Questions: The Nature of Negotiation</strong>
+<li><strong>Virtual meeting Workshop: Resolución de conflictos</strong>
 <ul>
 <li><strong>Meeting time</strong>: 19:00 - 19:45 hours</li>
 <li><strong>Prerequisites</strong>:
@@ -2905,7 +2905,7 @@ height: 0px !important;
 </ul></li>
 <li><p>October 2</p>
 <ul>
-<li><strong>Virtual meeting Workshop: Líderes para el Trabajo en Equipo</strong>
+<li><strong>Virtual meeting Questions: Strategy and Tactics of Distributive Bargaining</strong>
 <ul>
 <li><strong>Meeting time</strong>: 19:00 - 19:45 hours</li>
 <li><strong>Prerequisites</strong>:
@@ -2960,7 +2960,7 @@ height: 0px !important;
 </ul></li>
 <li><p>October 16</p>
 <ul>
-<li><strong>Virtual meeting Questions: Strategy and Tactics of Integrative Negotiation and Three-Party Coalition Exercise Round 1</strong>
+<li><strong>Virtual meeting Workshop: Líderes para el Trabajo en Equipo</strong>
 <ul>
 <li><strong>Meeting time</strong>: 19:00 - 19:45 hours</li>
 <li><strong>Prerequisites</strong>:
@@ -3086,7 +3086,7 @@ height: 0px !important;
 </ul></li>
 <li><p>November 6</p>
 <ul>
-<li><strong>Virtual meeting Questions: Communication and Three-Party Coalition Exercise Round 2</strong>
+<li><strong>Virtual meeting Workshop: El poder de resolver - conquista los conflictos con inteligencia emocional</strong>
 <ul>
 <li><strong>Meeting time</strong>: 19:00 - 19:45 hours</li>
 <li><strong>Prerequisites</strong>:
